--- a/1주차/DL_basic.ipynb
+++ b/1주차/DL_basic.ipynb
@@ -42,11 +42,14 @@
     "#### ❓ <font color='red'><b>[ 퀴즈 ]</b></font> Objective function (단일선택)\n",
     "\n",
     "``` python\n",
-    "흔히 classification task에서는 cross-entropy를 목적식으로 활용합니다. 다른 loss 함수로 KL-divergence loss 가 있습니다. KL-divergence는 확률분포 사이의 차이를 비교할 때 사용하는 방법 중의 하나입니다. 가령, 확률 분포 P를 모델링하여 확률 분포 Q를 얻었을 때, 모델링한 Q가 원래의 P와 얼마나 차이가 나는 지 확인할 때 사용합니다.\n",
+    "흔히 classification task에서는 cross-entropy를 목적식으로 활용합니다. \n",
+    "다른 loss 함수로 KL-divergence loss 가 있습니다. KL-divergence는 확률분포 사이의 차이를 비교할 때 사용하는 방법 중의 하나입니다. \n",
+    "가령, 확률 분포 P를 모델링하여 확률 분포 Q를 얻었을 때, 모델링한 Q가 원래의 P와 얼마나 차이가 나는 지 확인할 때 사용합니다.\n",
     "\n",
-    "이 때, 주어진 확률분포 P, Q 에 대하여, cross-entropy H(P,Q) 수식을 entropy H(X) 와 KL-divergence KL (X|Y) 로 표현할 수 있는데요. 수식이 아래와 같을 때, cross-entropy와 KL-divergence의 관계를 올바르게 표현한 것은 어떤 것일까요?\n",
+    "이 때, 주어진 확률분포 P, Q 에 대하여, cross-entropy H(P,Q) 수식을 entropy H(X) 와 KL-divergence KL (X|Y) 로 표현할 수 있는데요. \n",
+    "수식이 아래와 같을 때, cross-entropy와 KL-divergence의 관계를 올바르게 표현한 것은 어떤 것일까요?\n",
     "```\n",
-    "![](ex_image2.png)\n",
+    "![](https://github.com/Pjunn/GDSC_mlstudy/blob/main/1%EC%A3%BC%EC%B0%A8/ex_image2.png?raw=true)\n",
     "```python\n",
     "- (1) H(P,Q) = H(P) + KL(P||Q)\n",
     "- (2) H(P,Q) = H(Q) + KL(P||Q)\n",
@@ -131,7 +134,7 @@
     "```python\n",
     "다음 그림에서, 파란색으로 칠해진 영역으로 표시된, convolutional layer의 파라미터 갯수를 구하세요. (단, bias 항은 없다고 가정합니다.)\n",
     "```\n",
-    "![](ex_image3.png)\n"
+    "![](https://github.com/Pjunn/GDSC_mlstudy/blob/main/1%EC%A3%BC%EC%B0%A8/ex_image3.png?raw=true)\n"
    ]
   },
   {
@@ -398,69 +401,6 @@
     "    print(\"🎉🎉🎉 성공!!! 🎉🎉🎉\")\n",
     "else:\n",
     "    print(\"다시 도전해봐요!\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 정답 코드"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🎉🎉🎉 성공!!! 🎉🎉🎉\n"
-     ]
-    }
-   ],
-   "source": [
-    "def convolution(input_data, kernel):\n",
-    "    # 입력 데이터와 커널의 높이와 너비 계산\n",
-    "    input_height, input_width = len(input_data), len(input_data[0])\n",
-    "    kernel_height, kernel_width = len(kernel), len(kernel[0])\n",
-    "\n",
-    "    # 출력 데이터의 높이와 너비 계산\n",
-    "    output_height = input_height - kernel_height + 1\n",
-    "    output_width = input_width - kernel_width + 1\n",
-    "\n",
-    "    # 출력 데이터를 저장할 빈 2D 리스트 생성\n",
-    "    output_data = [[0] * output_width for _ in range(output_height)]\n",
-    "\n",
-    "    # 컨볼루션 연산 수행\n",
-    "    for i in range(output_height):\n",
-    "        for j in range(output_width):\n",
-    "            # 현재 위치에서의 컨볼루션 연산 수행\n",
-    "            output_data[i][j] = sum(input_data[x + i][y + j] * kernel[x][y]\n",
-    "                                    for x in range(kernel_height)\n",
-    "                                    for y in range(kernel_width))\n",
-    "\n",
-    "    # 결과 반환\n",
-    "    return output_data\n",
-    "\n",
-    "# 입력 데이터 (4x4 크기의 2D 리스트)\n",
-    "input_data = [[1, 2, 3, 4],\n",
-    "              [5, 6, 7, 8],\n",
-    "              [9, 10, 11, 12],\n",
-    "              [13, 14, 15, 16]]\n",
-    "\n",
-    "# 커널 (3x3 크기의 2D 리스트)\n",
-    "kernel = [[1, 0, -1],\n",
-    "          [2, 0, -2],\n",
-    "          [1, 0, -1]]\n",
-    "\n",
-    "# 컨볼루션 연산 수행\n",
-    "output_data = convolution(input_data, kernel)\n",
-    "if output_data == [[-8, -8], [-8, -8]]:\n",
-    "    print(\"🎉🎉🎉 성공!!! 🎉🎉🎉\")\n",
-    "else:\n",
-    "    print(\"다시 도전해봐요!\")"
    ]
   },
   {
@@ -749,14 +689,14 @@
     "```python\n",
     "합성곱 연산에서 필터(가충치, Weight)의 윈도우를 일정한 간격으로 이동해가며 계산합니다. 이후 편향(bias)를 더해주어 최종 출력을 완성합니다.\n",
     "```\n",
-    "![conv](conv_bias.gif)\n",
+    "![conv](https://github.com/Pjunn/GDSC_mlstudy/blob/main/1%EC%A3%BC%EC%B0%A8/conv_bias.gif?raw=true)\n",
     "\n",
     "```python\n",
     "위 예시의 그림에서 파라미터 개수를 계산해본다면 필터: 3*3 = 9개, 편향: 1개 이고, 따라서 총 파라미터 개수는 10개입니다. 이때 편향의 개수는 필터의 개수와 일치합니다.\n",
     "\n",
     "이제 AlexNet의 파라미터 개수를 계산해봅시다!\n",
     "```\n",
-    "![an](alexnet_more.png)\n",
+    "![an](https://github.com/Pjunn/GDSC_mlstudy/blob/main/1%EC%A3%BC%EC%B0%A8/alexnet.png?raw=true)\n",
     "```python\n",
     "첫번째 convolution Layer를 보면 필터의 크기가 11x11 이고 입력 채널수가 3, 출력 채널수가 48*2 = 96 입니다.\n",
     "이때 파라미터 개수를 계산해보면 필터: 11 * 11 * 3 * 96 = 34848개 편향: 96개 로 총 34944개임을 알 수 있습니다.\n",
@@ -794,59 +734,6 @@
     "\n",
     "# 아래 코드는 수정하실 필요가 없습니다!\n",
     "\n",
-    "# 총 파라미터 개수 계산\n",
-    "total_parameters = calculate_alexnet_parameters()\n",
-    "\n",
-    "if total_parameters == 62378344:\n",
-    "    print(\"🎉🎉🎉 성공!!! 🎉🎉🎉\")\n",
-    "else:\n",
-    "    print(\"다시 도전해봐요!\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 정답 코드"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AlexNet의 총 파라미터 개수는 몇 개인가요?\n",
-      "정답은 정수로 입력하세요.\n",
-      "🎉🎉🎉 성공!!! 🎉🎉🎉\n"
-     ]
-    }
-   ],
-   "source": [
-    "# AlexNet의 각 레이어 파라미터 개수 계산하는 함수\n",
-    "def calculate_alexnet_parameters():\n",
-    "    # 각 레이어의 파라미터 개수 계산\n",
-    "    conv1_params = (11 * 11 * 3 + 1) * 96\n",
-    "    conv2_params = (5 * 5 * 96 + 1) * 256\n",
-    "    conv3_params = (3 * 3 * 256 + 1) * 384\n",
-    "    conv4_params = (3 * 3 * 384 + 1) * 384\n",
-    "    conv5_params = (3 * 3 * 384 + 1) * 256\n",
-    "    fc1_params = (6 * 6 * 256 + 1) * 4096\n",
-    "    fc2_params = (4096 + 1) * 4096\n",
-    "    fc3_params = (4096 + 1) * 1000  # ImageNet 클래스 수\n",
-    "\n",
-    "    # 총 파라미터 개수 계산\n",
-    "    total_params = conv1_params + conv2_params + conv3_params + conv4_params + \\\n",
-    "                   conv5_params + fc1_params + fc2_params + fc3_params\n",
-    "\n",
-    "    return total_params\n",
-    "\n",
-    "# 문제 출력\n",
-    "print(\"AlexNet의 총 파라미터 개수는 몇 개인가요?\")\n",
-    "print(\"정답은 정수로 입력하세요.\")\n",
     "# 총 파라미터 개수 계산\n",
     "total_parameters = calculate_alexnet_parameters()\n",
     "\n",
